Merge pull request #27 from peter2500zz/1.21-fabric
修复获取信息流认证秘钥时没有Wbi签名的问题