@@ -2,22 +2,27 @@ package com.github.tartaricacid.bakadanmaku.site.bilibili;
 
 import com.github.tartaricacid.bakadanmaku.BakaDanmaku;
 import com.github.tartaricacid.bakadanmaku.config.BilibiliConfig;
+import com.google.common.net.HttpHeaders;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import org.apache.commons.io.IOUtils;
 
-import java.io.UnsupportedEncodingException;
-import java.net.*;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
 
 public class WebSocketAuth {
-    private static final String INIT_URL = "https://api.live.bilibili.com/xlive/web-room/v1/index/getDanmuInfo?id=%d&type=0";
+    private static final String INIT_URL = "https://api.live.bilibili.com/xlive/web-room/v1/index/getDanmuInfo";
     private static final Gson GSON = new Gson();
     private static final String AUTH_FORMAT = "{\"uid\":%d,\"roomid\":%d,\"protover\":3,\"buvid\":\"%s\",\"platform\":\"web\",\"type\":2,\"key\":\"%s\"}";
 
     public static byte[] newAuth(BilibiliConfig.Room room) {
         RoomInfo roomInfo = RoomInfo.getRoomInfo(room.getId());
-        if (roomInfo == null) return null;
+        if (roomInfo == null) {
+            return null;
+        }
 
         if (room.isManualAuth()) {
             return room
@@ -29,48 +34,50 @@ public class WebSocketAuth {
         String cookie = "";
         String buvid3 = "";
         boolean ownerAuth = true;
-        try {
-            if (room.getCookie() == null) {
-                // 游客方式
-                ownerAuth = false;
-                Buvid buvid = Buvid.newBuvid(roomInfo.getRoomId());
-                if (buvid != null) {
-                    cookie = String.format(
-                            "buvid3=%s; buvid4=%s",
-                            URLEncoder.encode(buvid.getBuvid3(), "UTF-8"),
-                            URLEncoder.encode(buvid.getBuvid4(), "UTF-8")
-                    );
-                    buvid3 = buvid.getBuvid3();
-                }
-                BakaDanmaku.LOGGER.info("[BakaDanmaku] Login Be Guest");
-            } else {
-                // 登陆方式
-                buvid3 = room.getCookie().getOrDefault("buvid3", Buvid.getBuvid3(roomInfo.getRoomId()));
-                StringBuilder sb = new StringBuilder();
-                room.getCookie().forEach((k, v) -> {
-                    if ("buvid3".equals(k)) return;
-                    try {
-                        v = URLEncoder.encode(v, "UTF-8");
-                    } catch (UnsupportedEncodingException ignored) {
-
-                    }
-                    sb.append(k).append("=").append(v).append("; ");
-                });
-                cookie = String.format("buvid3=%s; %s", URLEncoder.encode(buvid3, "UTF-8"), sb);
-                BakaDanmaku.LOGGER.info("[BakaDanmaku] Login Be User");
+        if (room.getCookie() == null) {
+            // 游客方式
+            ownerAuth = false;
+            Buvid buvid = Buvid.newBuvid(roomInfo.getRoomId());
+            if (buvid != null) {
+                cookie = String.format(
+                        "buvid3=%s; buvid4=%s",
+                        URLEncoder.encode(buvid.getBuvid3(), StandardCharsets.UTF_8),
+                        URLEncoder.encode(buvid.getBuvid4(), StandardCharsets.UTF_8)
+                );
+                buvid3 = buvid.getBuvid3();
             }
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
+            BakaDanmaku.LOGGER.info("[BakaDanmaku] Login Be Guest");
+        } else {
+            // 登陆方式
+            buvid3 = room.getCookie().getOrDefault("buvid3", Buvid.getBuvid3(roomInfo.getRoomId()));
+            StringBuilder sb = new StringBuilder();
+            room.getCookie().forEach((k, v) -> {
+                if ("buvid3".equals(k)) {
+                    return;
+                }
+                v = URLEncoder.encode(v, StandardCharsets.UTF_8);
+                sb.append(k).append("=").append(v).append("; ");
+            });
+            cookie = String.format("buvid3=%s; %s", URLEncoder.encode(buvid3, StandardCharsets.UTF_8), sb);
+            BakaDanmaku.LOGGER.info("[BakaDanmaku] Login Be User");
         }
 
-        if (buvid3 == null) return null;
+        if (buvid3 == null) {
+            return null;
+        }
         try {
-            URL url = new URL(String.format(INIT_URL, roomInfo.getRoomId()));
+            HashMap<String, String> params = new HashMap<>();
+            params.put("id", String.valueOf(roomInfo.getRoomId()));
+            params.put("type", "0");
+
+            URL url = new URL(INIT_URL + "?" + WbiSigner.wbiSign(params));
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             try {
-                conn.addRequestProperty("Cookie", cookie);
+                conn.addRequestProperty(HttpHeaders.COOKIE, cookie);
                 conn.setRequestMethod("GET");
-                String data = IOUtils.toString(conn.getInputStream());
+                conn.addRequestProperty(HttpHeaders.USER_AGENT, "Mozilla/5.0");
+                conn.addRequestProperty(HttpHeaders.REFERER, "https://www.bilibili.com/");
+                String data = IOUtils.toString(conn.getInputStream(), StandardCharsets.UTF_8);
                 JsonObject response = GSON.fromJson(data, JsonObject.class);
                 String token = response.getAsJsonObject("data").get("token").getAsString();
                 String auth = String.format(
@@ -81,7 +88,7 @@ public class WebSocketAuth {
                 conn.disconnect();
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            BakaDanmaku.LOGGER.error(e);
         }
         return null;
     }
@@ -109,7 +116,7 @@ public class WebSocketAuth {
                         obj.get("b_4").getAsString()
                 );
             } catch (Exception e) {
-                e.printStackTrace();
+                BakaDanmaku.LOGGER.error(e);
             }
             return null;
         }
